fix: #1923 Fix UI issues on IE11

--- a/packages/elements/src/styles/base/layout.scss
+++ b/packages/elements/src/styles/base/layout.scss
@@ -14,4 +14,5 @@ $layout-quadruple: calc(1rem * 4);
 $layout-sextuple: calc(1rem * 6);
 
 $menu-width: 250px;
+$nav-bar-width: 66px;
 $page-container: calc(100vw - 250px);
